🔒 SECURITY: Remove hardcoded ngrok URL, add security headers, upgrade dependencies
- Remove hardcoded ngrok tunnel URL from firebase.json (was publicly exposing dev endpoint)
- Add comprehensive security headers (CSP, X-Frame-Options, X-Content-Type-Options, etc.)
- Upgrade dependencies to latest secure versions (Flask 3.0.0, firebase-admin 6.3.0)
- Expand .env.example with security configuration documentation
- Add ALLOWED_HOSTS, SESSION_COOKIE security settings
- Configure API endpoint via environment variable instead of hardcoded values

BREAKING: Must set FLASK_SECRET_KEY and Firebase credentials in environment variables before deploying.

Fixes: #security-ngrok-exposure

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,25 @@
-FLASK_SECRET_KEY=your-secret-key-here
+# Flask Configuration
+FLASK_ENV=production
+FLASK_SECRET_KEY=your-strong-secret-key-here-change-in-production
+FLASK_DEBUG=False
+
+# Firebase Configuration
+FIREBASE_PROJECT_ID=ractaskmanagement
 FIREBASE_API_KEY=your-firebase-api-key
-FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+FIREBASE_AUTH_DOMAIN=ractaskmanagement.firebaseapp.com
+FIREBASE_STORAGE_BUCKET=ractaskmanagement.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=your-sender-id
 FIREBASE_APP_ID=your-app-id
 FIREBASE_MEASUREMENT_ID=your-measurement-id
+
+# Backend/API Configuration
+# Set this to your production backend URL (do NOT include in .env file when deployed)
+API_BASE_URL=https://your-api-domain.com
+# For local development only:
+# API_BASE_URL=http://localhost:5000
+
+# Security
+ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
+SESSION_COOKIE_SECURE=True
+SESSION_COOKIE_HTTPONLY=True
+SESSION_COOKIE_SAMESITE=Strict
